<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sk.tuke.rusyn.screens.UserInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_profil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textAlignment="center"
            android:text="@string/user_profil" />

        <TextView
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginStart="15dp"
            android:text="@string/user_email" />

        <TextView
            android:id="@+id/user_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:text="" />

        <Button
            android:id="@+id/userInfo_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DD3131"
            android:textColor="#FFFFFF"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/btn_odhlasenie" />

        <Button
            android:id="@+id/btn_spat2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/btn_spat" />
    </LinearLayout>
</ScrollView>
