<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sk.tuke.rusyn.screens.LessonInfo"
    android:background="#2C6B7A">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_lekcia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#4DA0CC"
                android:textAlignment="center"
                android:textSize="30sp"
                android:layout_marginTop="50dp"
                android:text="@string/text_lekcia" />

            <TextView
                android:id="@+id/text_cislolekcie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#4DA0CC"
                android:textAlignment="center"
                android:textSize="50sp"
                android:text="" />

            <TextView
                android:id="@+id/text_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="50dp"
                android:text="@string/text_info" />

            <TextView
                android:id="@+id/text_aboutlesson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/button_spat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#DD3131"
            android:textColor="#FFFFFF"
            android:layout_weight="1"
            android:text="@string/button_spat"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_pokracuj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFB105"
            android:textColor="#FFFFFF"
            android:layout_weight="1"
            android:text="@string/button_pokracuj"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</RelativeLayout>